# thesis-graph-coloring-code

./: .gitignore  .gitmodules  CMakeLists.txt  GraphColoring.sln  README.md  nohup.out  run_tests.sh
AdjacencyMatrix/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  AdjacencyMatrix.vcxproj  AdjacencyMatrix.vcxproj.filters
Benchmark/: Benchmark.vcxproj  Benchmark.vcxproj.filters  benchmark.cpp  benchmark.h
CSR/: CSR.vcxproj  CompressedSparseRow.cpp  CompressedSparseRow.h
ColoringAlgorithm/: ColoringAlgorithm.cpp  ColoringAlgorithm.h  ColoringAlgorithm.vcxproj  ColoringAlgorithm.vcxproj.filters  CusparseColoring.cpp  CusparseColoring.h  GebremedhinManne.cpp  GebremedhinManne.h  Greedy.cpp  Greedy.h  JonesPlassmann.cpp  JonesPlassmann.h
CompressedSparseRow/: CompressedSparseRow.h  CompressedSparseRow.vcxproj.filters
Configuration/: Configuration.vcxproj  Configuration.vcxproj.filters  configuration.h
CudaKernels/: CudaKernels.vcxproj  cudaKernels.cu  cudaKernels.h
CudaMain/: CudaMain.vcxproj  main.cpp
GM CUDA Naive/: GM CUDA Naive.vcxproj  kernel.cu
GM Multi Thread/: GM Multi Thread.vcxproj  main.cpp
GM Single Thread/: Naive.vcxproj  main.cpp
GM Single Thread CSR/: GM Single Thread CSR.vcxproj  main.cpp
GebremedhinManne/: GebremedhinManne.cpp  GebremedhinManne.h  GebremedhinManne.vcxproj  GebremedhinManne.vcxproj.filters
Graph/: GM.cpp  GM.h  Graph.vcxproj  Graph.vcxproj.filters  graph.cpp  graph.h
GraphColoring/: CMakeLists.txt  GraphColoringConfig.h.in  NewBenchmark.h  main.cpp
GraphColoring/barrier/: barrier.cpp  barrier.h
GraphColoring/benchmark/: benchmark.cpp  benchmark.h
GraphColoring/coloralgo/: ColoringAlgorithm.cpp  ColoringAlgorithm.h
GraphColoring/coloralgo/cusparse/: CusparseColoring.cpp  CusparseColoring.h
GraphColoring/coloralgo/gebremedhinmanne/: GebremedhinManne.cpp  GebremedhinManne.h
GraphColoring/coloralgo/greedy/: Greedy.cpp  Greedy.h
GraphColoring/coloralgo/jonesplassmann/: JonesPlassmann.cpp  JonesPlassmann.h
GraphColoring/cudakernels/: cudaKernels.cu  cudaKernels.h
GraphColoring/graphrepresentation/: GraphRepresentation.cpp  GraphRepresentation.h
GraphColoring/graphrepresentation/adjacencymatrix/: AdjacencyMatrix.cpp  AdjacencyMatrix.h
GraphColoring/graphrepresentation/csr/: CompressedSparseRow.cpp  CompressedSparseRow.h
GraphColoring/vulkan_kernels/: .gitignore  CMakeLists.txt  vulkanKernels.cpp  vulkanKernels.h
GraphColoring/vulkan_kernels/shaders/: check_colors.comp  coloring.comp  degree_colors.comp
GraphRepresentation/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  CompressedSparseRow.cpp  CompressedSparseRow.h  GraphRepresentation.cpp  GraphRepresentation.h  GraphRepresentation.vcxproj  GraphRepresentation.vcxproj.filters
JonesPlassmann/: JonesPlassmann.cpp  JonesPlassmann.h  JonesPlassmann.vcxproj  JonesPlassmann.vcxproj.filters
Loader/: Loader.vcxproj  Loader.vcxproj.filters  loader.cpp  loader.h
Main/: Main.vcxproj  main.cpp
barrier/: Barrier.cpp  barrier.vcxproj  barrier.vcxproj.filters
build_no_stream/GraphColoring/: GraphColoringConfig.h  cusparse  gm_par_async_imp  gm_par_async_std  gm_par_sync_imp  gm_par_sync_std  gm_seq_async_imp  gm_seq_async_std  gm_seq_sync_imp  gm_seq_sync_std  greedy_par  greedy_seq  jp_cuda_double  jp_cuda_single  jp_par  jp_seq
cmake/: AutoDetectCudaArch.cmake
results/ASIC_320ks.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/FEM_3D_thermal2.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/G3_circuit.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/af_shell3.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/apache2.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/atmosmodd.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/cage13.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/ecology2.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/email-Enron.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/email_enron.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/hollywood-2009.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/indochina-2004.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/large_twitch.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/new/: double_no_stream.txt  double_stream.txt  single_no_stream.txt  single_stream.txt
results/offshore.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/parabolic_fem.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/qg.order100.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/rgg_n_2_15_s0.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/rgg_n_2_16_s0.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/rgg_n_2_17_s0.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/rgg_n_2_18_s0.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  single_no_stream.txt  single_stream.txt
results/rgg_n_2_19_s0.gra/: double_no_stream.txt  double_stream.txt  double_vk.txt  (+2 more)
shaders/: check_colors.comp.spv  coloring.comp.spv  degree_colors.comp.spv
src/: configuration.h
(+141 files in other folders)
